fix number overflow of cube and tile bounds in css

--- a/src/2D.css
+++ b/src/2D.css
@@ -233,7 +233,7 @@
 }
 
 .tiles2D .tile.tile-1000 .tile-inner {
-    font-size: 1.70em;
+    font-size: 1.40em;
 }
 
 .tiles2D .tile.tile-10000 .tile-inner {
